Finished formatting of the jumbotron section, jumbotron is now fully responsive (please test to verify)
Will start work on the rest of the website

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
                 <h1 id="maintitle" class="text-center">
                     Kelvin Jiang
                 </h1>
+                <hr width="50%">
+                <div class="hr"></div>
                 <h3 class="text-center" id="subtitle">Software engineering major</h3>
             </div>
         </div> 
     </div>
           
-    <div id="aboutme">
+    <div id="about">
         My name is kelvin lol
     </div>      
 </body>
