--- a/index.html
+++ b/index.html
@@ -70,7 +70,26 @@
         <div class="container-fluid text-center"> 
             <h1><br><br>ABOUT ME</h1>
             <hr width="50%" id="abouthr">
+            <p id="aboutme">Hi, my name is Kelvin and I am currently studying Software Engineering at the University of Waterloo. I have a huge interest and passion for learning programming and combining what I learned and the ideas I come up with to make applications and games.
+            I am fluent in Java, and I have experience with: C/C++, Python, HTML/CSS and Javascript.</p>
         </div>
+        <div class="row text-center" id="interests">
+            <div class="col-lg-4">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                <h2>Mathematics</h2>
+                <p>I have participated in math contests throughout high school and the knowledge and skills I have gained from the experience are invaluable. To me, mathematics is an incredibly rewarding subject that provides unique and clever ways to solve tough problems.</p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                <h2>Music</h2>
+                <p>I love listening to music and I love learning and playing musical instruments. I have played piano since the age of 5 and I play for enjoyment and relaxation. Transcribing music is one of my main hobbies, and I also compose music from time to time.</p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                <h2>Games</h2>
+                  <p>I look to gaming as more than just entertainment; it’s one of my main sources for project ideas. I tend to prefer indie games as they tend to introduce novel concepts while keeping things simple and clean.</p>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
     </div>   
     <div id="projects">
         <div class="container-fluid text-center"> 
@@ -82,6 +101,11 @@
         <div class="container-fluid text-center"> 
             <h1><br><br>CONTACT ME</h1>
             <hr width="50%" id="abouthr">
+        </div>
+    </div>  
+    <div id="footer">
+        <div class="container-fluid text-center"> 
+            <h1><br><br>END OF PAGE</h1>
         </div>
     </div>  
 </body>
