Quick push: added a button at the bottom of the jumbotron that scrolls you to about... AND IT'S ANIMATED TOO!

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         </div> 
     </div>
           
+    <div id="scroller">
+        <img src="images/scrollToAbout.png" width="100%" height="72"/>
+    </div>
+
     <!-- I WILL FORMAT THIS TO MAKE IT LOOK PRETTY LATER, BEAR WITH ME OK?!-->
     <div id="about">
         <div class="container-fluid text-center"> 
@@ -78,17 +82,17 @@
         </div>
         <div class="row text-center" id="interests">
             <div class="col-lg-4">
-                <i class="fa fa-calculator fa-5x"></i>
+                <i class="fa fa-calculator fa-4x" id="icon"></i>
                 <h2>Mathematics</h2>
                 <p id="interest-text">I have participated in math contests throughout high school and the knowledge and skills I have gained from the experience are invaluable. To me, mathematics is an incredibly rewarding subject that provides unique and clever ways to solve tough problems.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <i class="fa fa-music fa-5x"></i>
+                <i class="fa fa-music fa-4x" id="icon"></i>
                 <h2>Music</h2>
                 <p id="interest-text">I love listening to music and I love learning and playing musical instruments. I have played piano since the age of 5 and I play for enjoyment and relaxation. Transcribing music is one of my main hobbies, and I also compose music from time to time.</p>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <i class="fa fa-gamepad fa-5x"></i>
+                <i class="fa fa-gamepad fa-4x" id="icon"></i>
                 <h2>Games</h2>
                   <p id="interest-text">I look to gaming as more than just entertainment; it’s one of my main sources for project ideas. I tend to prefer indie games as they tend to introduce novel concepts while keeping things simple and clean.</p>
             </div>
