quick content and format update for the about section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
     <div id="about">
         <div class="container-fluid text-center"> 
             <h1><br><br>ABOUT ME</h1>
-            <hr width="50%" id="abouthr">
+            <hr width="30%" id="abouthr">
             <p class="text-center" id="aboutme">Hi, my name is Kelvin and I am currently studying Software Engineering at the University of Waterloo. I have a huge interest and passion for learning programming and combining what I learned and the ideas I come up with to make applications and games.
-            I am fluent in Java, and I have experience with: C/C++, Python, HTML/CSS and Javascript.</p>
+            <br><br>Up to now, I have the most experience in writing server-side code and I am looking forward to learning new technologies, frameworks and tools to augment my skill set.
+            <br><br>I am comfortable with Java, and I have experience with: C/C++, Python, HTML/CSS and Javascript. You can check out my github <a href="http://github.com/Celsius273">here</a> for more information on my recent projects.
+            <br><br>Besides programming, I also have interests in:</p>
         </div>
         <div class="row text-center" id="interests">
             <div class="col-lg-4">
