It's been a while... added an arrow icon to the scroll-past-home_splash
started work on adding content to the projects section: currently consists of large images that show a project description on a darkened background when moused-over, currently looks kind of ugly

--- a/index.html
+++ b/index.html
@@ -70,16 +70,17 @@
           
     <div id="scroller">
         <img src="images/scrollToAbout.png" width="100%" height="72"/>
+        <img id ="scroller-arrow" src="images/arrow.png" width="72" height="32"/>
     </div>
-
-    <!-- I WILL FORMAT THIS TO MAKE IT LOOK PRETTY LATER, BEAR WITH ME OK?!-->
+    
+    <!-- This section may be continually formatted in the future to look prettier -->
     <div id="about">
         <div class="container-fluid text-center"> 
             <h1><br><br>ABOUT ME</h1>
             <hr width="30%" id="abouthr">
             <p class="text-center" id="aboutme">Hi, my name is Kelvin and I am currently studying Software Engineering at the University of Waterloo. I have a huge interest and passion for learning programming and combining what I learned and the ideas I come up with to make applications and games.
             <br><br>Up to now, I have the most experience in writing server-side code and I am looking forward to learning new technologies, frameworks and tools to augment my skill set.
-            <br><br>I am comfortable with Java, and I have experience with: C/C++, Python, HTML/CSS and Javascript. You can check out my github <a href="http://github.com/Celsius273">here</a> for more information on my recent projects.
+            <br><br>I am comfortable with Java, and I have experience with: C/C++, Python, HTML/CSS and Javascript. You can check out my github <a target="_blank" href="http://github.com/Celsius273">here</a> for more information on my recent projects.
             <br><br>Besides programming, I also have interests in:</p>
         </div>
         <div class="row text-center" id="interests">
@@ -103,7 +104,21 @@
     <div id="projects">
         <div class="container-fluid text-center"> 
             <h1><br><br>PROJECTS</h1>
-            <hr width="50%" id="abouthr">
+            <hr width="30%" id="abouthr">
+
+            <p class="text-center" id="projects-intro">Here are some of my projects, information about completed and WIP projects will be updated all the time!</p>
+        </div>
+        <div class="container-fluid text-center" id="project-details">
+
+            <h1><br><br>2048-tris</h1>
+            <hr width="30%" id="abouthr">
+            <div id="tris" class="project-photo">
+                <div class="project-overlay">
+                    <p id="project-text">2048-tris is a fusion of 2048 and Tetris that was created in the span of 24 hours in hackWaterloo. </p>
+                </div>
+            </div>
+
+
         </div>
     </div>   
     <div id="contact">
