Quick content push (while I'm physically ill)
Added links to some of the projects so you can play them in your browser, and made the image aspect ratios nicer

Also finished the footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#">GraviSim</a></li>
                                     <li><a href="#">QuadTree webtoy</a></li>
-                                    <li><a href="#">2048-tris</a></li>
+                                    <li><a href="#tristitle">2048-tris</a></li>
                                 </ul>
                             </li>
                             
@@ -110,14 +110,21 @@
         </div>
         <div class="container-fluid text-center" id="project-details">
 
-            <h1><br><br>2048-tris</h1>
+            <h1 id="tristitle"><br><br>2048-tris</h1>
             <hr width="30%" id="abouthr">
             <div id="tris" class="project-photo">
                 <div class="project-overlay">
-                    <p id="project-text">2048-tris is a fusion of 2048 and Tetris that was created in the span of 24 hours in hackWaterloo. </p>
+                    <p id="project-text">2048-tris is a fusion of 2048 and Tetris that was created in the span of 24 hours in hackWaterloo. Click <a target="_blank" href="2048tris.html">here</a> to play it for yourself!</p>
                 </div>
             </div>
 
+            <h1 id="quadtreetitle"><br><br>Quadtree test</h1>
+            <hr width="30%" id="abouthr">
+            <div id="quadtree" class="project-photo">
+                <div class="project-overlay">
+                    <p id="project-text">This is a quick and dirty simulator I built in Javascript to demonstrate the advantages of quadtrees. You may notice that the simulation still runs smoothly even if you add a whole lot of objects! Click <a target="_blank" href="quadtree.html">here</a> to try it out!</p>
+                </div>
+            </div>
 
         </div>
     </div>   
@@ -129,7 +136,8 @@
     </div>  
     <div id="footer">
         <div class="container-fluid text-center"> 
-            <h1><br><br>END OF PAGE</h1>
+            <br>Made with Bootstrap 3 and Font Awesome<br>
+            ©Kelvin Jiang 2015.
         </div>
     </div>  
 </body>
