Tried mailto, didn't work

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                             
                             <li class="dropdown" id="projects-nav"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">GraviSim</a></li>
-                                    <li><a href="#">QuadTree webtoy</a></li>
                                     <li><a href="#tristitle">2048-tris</a></li>
+                                    <li><a href="#quadtreetitle">QuadTree webtoy</a></li>
+                                    <li><a href="#gravisimtitle">GraviSim</a></li>
                                 </ul>
                             </li>
                             
@@ -126,12 +126,29 @@
                 </div>
             </div>
 
+            <h1 id="gravisimtitle"><br><br>GraviSim</h1>
+            <hr width="30%" id="abouthr">
+            <div id="gravisim" class="project-photo">
+                <div class="project-overlay">
+                    <p id="project-text">I built a gravity simulator using python and pygame during the Facebook hackathon in January 2014. I created the physics engine from scratch though the simulation does get slow for large numbers of planets. I am thinking of remaking this project once I learn the libgdx framework.</p>
+                </div>
+            </div>
+
         </div>
     </div>   
     <div id="contact">
         <div class="container-fluid text-center"> 
             <h1><br><br>CONTACT ME</h1>
             <hr width="50%" id="abouthr">
+
+
+
+            <form id="fr1">
+                <input type="text" id="tb1" />
+                <input type="text" id="tb2" />
+                <input type="button" id="bt1" value="click" />
+            </form>
+
         </div>
     </div>  
     <div id="footer">
