Started experimenting with dynamically resizing the project elements to make that section of website scalable

--- a/index.html
+++ b/index.html
@@ -142,13 +142,16 @@
             <hr width="50%" id="abouthr">
 
 
+            <!--
+
+            So someday when I get a server I will make sure that if you click the button, the email is sent automatically
 
             <form id="fr1">
                 <input type="text" id="tb1" />
                 <input type="text" id="tb2" />
                 <input type="button" id="bt1" value="click" />
             </form>
-
+            -->
         </div>
     </div>  
     <div id="footer">
