--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/plating.css">
+    <link rel="stylesheet" href="assets/custom.css">
 
 
     <script src="assets/jquery-1.11.0.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
-    <script src="assets/plating.js"></script>
+    <script src="assets/custom.js"></script>
 
     <link rel="icon" href="images/icon1.png">
 </head>
@@ -46,7 +46,7 @@
                             </li>
                             
                             <li  id="contact-nav"><a href="#contact">Contact</a></li>
-                            
+                            <li  id="resume-nav"><a href="docs/Resume.pdf" target="blank">Resume</a></li>
                         </ul>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                     Kelvin Jiang
                 </h1>
                 <hr width="50%" id="homehr">
-                <h3 class="text-center" id="subtitle">Software engineering major</h3>
+                <h3 class="text-center" id="subtitle">Software Engineering Major</h3>
             </div>
         </div> 
     </div>
@@ -138,9 +138,20 @@
     </div>   
     <div id="contact">
         <div class="container-fluid text-center"> 
-            <h1><br><br>CONTACT ME</h1>
+            <h1><br>CONTACT ME</h1>
             <hr width="50%" id="abouthr">
-
+            You can contact me via these links or email me at: kelvin.8000@gmail.com
+            <div class="row text-center" id="contact_icons">
+                <div class="col-lg-4">
+                    <a target="_blank" href="https://www.facebook.com/Celsius273"><img class = "link_icon" src="assets/facebook.png"></a>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                   <a target="_blank" href="https://github.com/Celsius273"><img class = "link_icon" id="link_icon-small" src="assets/github.png"></a>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                    <a target="_blank" href="http://ca.linkedin.com/in/celsius273"><img class = "link_icon" src="assets/linkedin.png"></a>
+                </div>
+            </div>
 
             <!--
 
